[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Materials/cube.tres" type="Material" id=1]
[ext_resource path="res://Assets/Shaders/advanced_outline.shader" type="Shader" id=2]
[ext_resource path="res://Assets/Sprites/effects/end_particle.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Objects/End.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_texture = ExtResource( 3 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=3]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.01948, 0.0, 0, 0 ]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Cube:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.5, 0, 0 ), Vector3( -0.5, 0, 0 ), Vector3( -0.8, 0.3, 0 ), Vector3( -0.8, 0.3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Cube:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -18.8714, -9.59391, -16.416 ), Vector3( -18.8714, -9.59391, -16.416 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Cube2:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -17.967, 11.2327, 11.2327 ), Vector3( -17.967, 11.2327, 11.2327 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Cube2:translation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, 0.3, 0 ), Vector3( 0.5, 0.3, 0 ), Vector3( 0.9, 0.989366, 0.121554 ), Vector3( 0.9, 0.989366, 0.121554 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Cube3:translation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, -0.5, 0 ), Vector3( 0.5, -0.5, 0 ), Vector3( 0.7, -0.904558, 0.0520945 ), Vector3( 0.7, -0.904558, 0.0520945 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/Cube3:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( -8.57562, 3.47941, 11.081 ), Vector3( -8.57562, 3.47941, 11.081 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Particles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Pivot:translation")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -1.1, 0 ), Vector3( 0, -1.1, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Pivot:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.8, 1.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Cube:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.8, 0.3, 0 ), Vector3( -0.8, 0.3, 0 ), Vector3( -0.5, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Cube:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -18.8714, -9.59391, -16.416 ), Vector3( -18.8714, -9.59391, -16.416 ), Vector3( -1.06721e-06, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Cube2:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.9, 0.989366, 0.121554 ), Vector3( 0.9, 0.989366, 0.121554 ), Vector3( 0.5, 0.3, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/Cube2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -17.967, 11.2327, 11.2327 ), Vector3( -17.967, 11.2327, 11.2327 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/Cube3:translation")
tracks/4/interp = 2
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.7, -0.904558, 0.0520945 ), Vector3( 0.7, -0.904558, 0.0520945 ), Vector3( 0.5, -0.5, 2.23517e-08 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/Cube3:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -8.57562, 3.47941, 11.081 ), Vector3( -8.57562, 3.47941, 11.081 ), Vector3( -3.55738e-06, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Particles:emitting")
tracks/6/interp = 2
tracks/6/loop_wrap = false
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Pivot:translation")
tracks/7/interp = 2
tracks/7/loop_wrap = false
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.3, 0 ), Vector3( 0, 0.3, 0 ), Vector3( 0, -1.1, 0 ), Vector3( 0, -1.1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Pivot:scale")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.8, 1.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hover"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Cube:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.8, 0.3, 0 ), Vector3( -0.8, 1.18633, 0.156283 ), Vector3( -0.8, 0.3, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Cube2:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.9, 0.989366, 0.121554 ), Vector3( 0.9, 0.595444, 0.0520945 ), Vector3( 0.9, 1.31764, 0.179437 ), Vector3( 0.9, 0.989366, 0.121554 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Cube3:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 3.6, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.7, -0.904558, 0.0520945 ), Vector3( 0.7, -0.510635, 0.121554 ), Vector3( 0.7, -1.00304, 0.0347297 ), Vector3( 0.7, -0.904558, 0.0520945 ) ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 2 )
shader_param/outline_width = 1.0
shader_param/outline_color = Color( 0, 0, 0, 1 )
shader_param/use_8way_kernel = false
shader_param/normalize_outline = false

[sub_resource type="ViewportTexture" id=10]
viewport_path = NodePath("Viewport")

[sub_resource type="CircleShape2D" id=11]
radius = 96.0

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "break"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "close"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "hover"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/break/node = SubResource( 12 )
states/break/position = Vector2( 312, 167 )
states/close/node = SubResource( 13 )
states/close/position = Vector2( 692, 167 )
states/hover/node = SubResource( 14 )
states/hover/position = Vector2( 491, 91 )
transitions = [ "break", "hover", SubResource( 15 ), "hover", "close", SubResource( 16 ), "close", "break", SubResource( 17 ) ]
start_node = "break"
end_node = "close"

[sub_resource type="AnimationNodeStateMachinePlayback" id=19]

[node name="End" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 64, 64 )
transparent_bg = true
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8 )
projection = 1
current = true
size = 8.0

[node name="Particles" type="CPUParticles" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.98023e-08, -1 )
material_override = SubResource( 2 )
amount = 6
mesh = SubResource( 3 )
emission_shape = 2
emission_box_extents = Vector3( 0.1, 0.1, 0 )
direction = Vector3( 0, -1, 0 )
spread = 90.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 1.0
damping = 2.0
scale_amount_curve = SubResource( 4 )

[node name="Pivot" type="Spatial" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0 )

[node name="Cube" type="MeshInstance" parent="Viewport/Pivot"]
transform = Transform( 0.465292, 0.264294, -0.0788531, -0.133709, 0.726143, 0.161723, 0.125, -0.207057, 0.466509, -0.8, 0.754246, 0.0800954 )
material_override = ExtResource( 1 )
mesh = SubResource( 5 )
material/0 = null

[node name="Cube2" type="MeshInstance" parent="Viewport/Pivot"]
transform = Transform( 0.475175, -0.125, 0.0926478, 0.0926474, 0.466508, 0.154235, -0.125, -0.12941, 0.466508, 0.9, 0.590156, 0.0511621 )
material_override = ExtResource( 1 )
mesh = SubResource( 5 )
material/0 = null

[node name="Cube3" type="MeshInstance" parent="Viewport/Pivot"]
transform = Transform( 0.488904, -0.0602171, 0.0300057, 0.0950239, 0.291116, 0.0745575, -0.0440824, -0.0403202, 0.4935, 0.7, -0.633735, 0.099848 )
material_override = ExtResource( 1 )
mesh = SubResource( 5 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport"]
anims/break = SubResource( 6 )
anims/close = SubResource( 7 )
anims/hover = SubResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4, 0 )
light_color = Color( 0.913725, 0.682353, 0.682353, 1 )
light_energy = 1.5
light_indirect_energy = 0.0
light_specular = 0.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
z_index = -1
texture = SubResource( 10 )

[node name="ActivationArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
shape = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 18 )
anim_player = NodePath("../Viewport/AnimationPlayer")
active = true
parameters/playback = SubResource( 19 )

[connection signal="body_entered" from="." to="." method="_on_End_body_entered"]
[connection signal="body_entered" from="ActivationArea" to="." method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_ActivationArea_body_exited"]
